# wut-studies

Semester 2/PROI/p0-adding/: makefile
Semester 2/PROI/p2-sport-club/: makefile
Semester 2/PROI/p3-lang-school/: main.cpp
Semester 3/AISDI/Graphs/: .gitignore  CMakeLists.txt
Semester 3/AISDI/Graphs/tests/: BridgeTests.cpp  CMakeLists.txt
Semester 3/AISDI/Linear/: CMakeLists.txt
Semester 3/ARKO/x86/: .gitignore  Makefile  count.asm  func.asm  huffman.asm  main.c
Semester 3/SOI/plans_for_tasks/: Koncepcja_t3.docx
Semester 3/SOI/task3+4/monitors/: CMakeLists.txt  main.cpp
Semester 3/SOI/task3+4/monitors/include/: Buffer.hpp  Consumer.hpp  Letter.hpp  Monitor.hpp  Producer.hpp
Semester 3/SOI/task3+4/monitors/src/: Buffer.cpp  Consumer.cpp  Letter.cpp  Monitor.cpp  Person.cpp  Producer.cpp
Semester_2/PROI/: README.md
Semester_2/PROI/p1-hex-calculator/: README.md  makefile
Semester_2/PROI/p2-sport-club/: README.md
Semester_2/PROI/p3-lang-school/: CMakeLists.txt
Semester_2/PROZ/: README.md
Semester_3/AISDI/: README.md
Semester_3/AISDI/Graphs/: CMakeLists.txt
Semester_3/AISDI/Maps/: CMakeLists.txt
Semester_3/ARKO/: README.md  huffman_mips.asm
Semester_3/ARKO/x86/: .gitignore  Makefile  count.asm  createCodes.asm  d_codes.asm  d_write.asm  func.asm  huffman.asm  (+3 more)
Semester_3/SOI/: README.md
Semester_4/APIOS/: .gitignore  README.md
Semester_4/BD/: README.md
Semester_4/BSS/: .gitignore  README.md
Semester_4/POBO/: .gitignore  README.md
Semester_4/PODA/: README.md
Semester_4/ROS/: README.md  prdom-szkoła.docx  prdom3.docx  prdom4.docx
(+284 files in other folders)
